--- a/SimpleATMSoftware/SimpleATMSoftware.csproj
+++ b/SimpleATMSoftware/SimpleATMSoftware.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ATMApp.Lib\ATMApp.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
